--- a/sajt/style.css
+++ b/sajt/style.css
@@ -11,9 +11,8 @@ body {
     width: 100%;
     height: 600px;
     background-image: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ),  url(slika1.jpeg);
-    
     background-size: 100%;
-    background-position-y: 50%;
+    background-position: 50% 50%;
     background-color: #cccccc;
     color: white;
     display: flex;
@@ -21,7 +20,7 @@ body {
 }
 
 .leftpart {
-    margin-left:440px;
+    margin-left:20%;
     margin-top: 160px;
     width: 260px;
     height: 370px;
@@ -40,7 +39,7 @@ body {
 }
 
 .rightpart {
-    margin-left: 150px;
+    margin-left: 5%;
     width: 640px;
     margin-top: 250px;
     line-height: 30px;
@@ -405,8 +404,8 @@ body {
 }
 .grid-container4 {
     display: grid;
-    grid-template-columns: 500px 700px;
-    grid-template-rows: 150px 150px;
+    grid-template-columns: 30% 40%;
+    grid-template-rows: 40% 40%;
     justify-content: center;
     align-content: center;
     padding-top: 50px;
@@ -461,4 +460,45 @@ body {
     font-size: 17px;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
+}
+
+/* smartphones, iPhone, portrait 480x320 phones */ 
+@media screen and (max-width:376px)  { 
+    .Introduction {
+        flex-direction: column;
+    }
+    .grid {
+        background-color: black;
+        width: 100%;
+        height: 1500px;
+    }
+    .grid-container {
+        grid-area:  
+        'text'
+        'text1'
+        'picture'
+        'picture2'
+        'picture1'
+        'picture1';
+    }
+}
+
+ /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ 
+@media (min-width:641px)  {
+
+}
+
+ /* tablet, landscape iPad, lo-res laptops ands desktops */
+@media (min-width:961px)  {
+
+}
+
+ /* big landscape tablets, laptops, and desktops */ 
+@media (min-width:1025px) and (max-width:1281px) {
+
+}
+
+ /* hi-res laptops and desktops */ 
+@media (min-width:1281px) {
+    
 }
