--- a/sajt/style.css
+++ b/sajt/style.css
@@ -283,7 +283,7 @@ body {
 .numbers {
     width: 100%;
     height: 400px;
-    background-image:linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(/sajt/slika5.jpg);
+    background-image:linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(slika5.jpg);
     background-size: 100%;
     background-position-y: 50%;
     display: flex;
@@ -347,7 +347,7 @@ body {
 .cust-img{
     width: 160px;
     height: 160px;
-    background-image: url(/sajt/slika6.jpg);
+    background-image: url(slika6.jpg);
     background-size: 100%;
     border-radius: 50%;
 }
@@ -367,7 +367,7 @@ body {
 .cust-img2{
     width: 160px;
     height: 160px;
-    background-image: url(/sajt/slika7.jpg);
+    background-image: url(slika7.jpg);
     background-size: 100%;
     border-radius: 50%;
 }
@@ -375,7 +375,7 @@ body {
     color: white;
     width: 100%;
     height: 700px;
-    background-image:linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(/sajt/slika8.jpeg);
+    background-image:linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(slika8.jpeg);
     background-size: 100%;
     background-position-y: 50%;    
     display: flex;
