--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -56,3 +56,38 @@ p {
   color: white;
   font-size: 23px;
 }
+
+.formica {
+  width: 100vw;
+  height: 100vh;
+  background-color: yellowgreen ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.formulilica {
+  width: 400px;
+  height: 500px;
+  background-color: lightgray;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  justify-content: center;
+  align-items: center;
+  border: 2px black solid;
+  border-radius: 2rem;
+}
+.dugmence {
+  width: 250px;
+  height: 50px;
+  font-size: 1.5rem;
+  border-radius: 3rem;
+  border: 2px solid gray;
+}
+
+button:hover {
+  background-color: yellowgreen;
+  cursor: pointer;
+  color: white; 
+}
